<?xml version="1.0"?>
<package format="2">
  <name>fanuc_descriptions</name>
  <version>0.0.0</version>
  <description>The fanuc_descriptions package</description>
  <maintainer email="masaru.morita@roms.inc">Masaru Morita</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>collada_urdf</exec_depend>
  <exec_depend>crx10_description</exec_depend>
  <exec_depend>fanuc_common</exec_depend>
  <exec_depend>m-10id-10l_description</exec_depend>
  <exec_depend>m-10id-12_description</exec_depend>
  <exec_depend>m-10id-16s_description</exec_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
